build : gradle 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,24 @@
+spring:
+  profiles:
+    active: local
 
-spring.application.name=household-accountBook
+  application:
+    name: account-book
+
+  jackson:
+    time-zone: Asia/Seoul
+    date-format: yyyy-MM-dd
+  servlet:
+    encoding:
+      force: true
+      charset: UTF-8
+      enabled: true
+
+server:
+  port: 8080
+
+logging:
+  level:
+    root: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql: TRACE
